# ansible-role-python-standalone

./: .gitignore  .yamllint  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
defaults/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
tasks/: main.yml
