[project]
name = "ansible-role-python-standalone"
version = "1.0.0"
description = "Ansible role pour installer et configurer Python Standalone"
requires-python = ">=3.13"
dependencies = [
    "ansible>=2.14",
    "ansible-lint>=6.0",
    "yamllint>=1.32",
    "molecule>=6.0",
    "molecule-plugins[docker]>=23.0",
]
